--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/hnet.com-image.ico">
+  <meta name="description" content="This is my personal website, meant for my personal philosophy and blogposts soon to come">
+  <meta name="author" content="862194669">
 
-  <title>John Doe - Business Administration</title>
+  <title>Angelo Alonzo - Economics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Angelo Alonzo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/angeloalonzo.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Angelo Alonzo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Economics/Admin Studies📚</div>
+        <p class="lead mb-4">Hello, I am a 2nd Year Economics major who is pursuing a career in data analaysis and is looking forward to learning a programmming language.Some of my hobbies include reading as well as making my own personal library with classics. I am avid kayaker who loves spending time on the beach and relaxing. <br><br>
 
-        Enter bio here<br><br>
+        As for my proffesional experience, I am currenlty a student at UCR attending full time. I have recentlty been approved to work in a remote internship for a small real estate equity investment firm in Shanghai. I will be conducting reserach on various chinese investors whom GreenTree is interested in as well as collaborating with other team members on project reports and investment analysis.I will also be working on Investment materiel preparation as well as investor outreach. Lastly financial modelling is one ofthe last things I and other interns will be working on.I hope to learn alot from my time there.  <br><br>
 
-        Enter bio here
+        More recent projects include my Biomed Caffeine Effects on Reaction Times, which tested the effects of caffiene on the reaction times of young adults.The results concluded that caffeine does not increase the reaction times of students. Despite this, I am also aspiring to be a reaserch assistant for my proffessor, who is working on his thesis on labour economics currenlty. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/in/angelo-alonzo-59858420a">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/angeloalonzo">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/angelo17529536">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:angeloalonzo2002@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Backroom Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Marshalls/Homegoods</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Processed merchandise so that it was ready for the sales floor<br> 
+              • Made sure aisles were clean and clear<br>
+              • Responsible for making sure lines were clear before recieving the truck<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Postmates Driver</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Postmates</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for delivering food to customers in a timely manner<br>
+              • making sure the orders were correct and if there were any issues, correct them immediately<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2020 - July 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Food Pantry Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">St. John Vianney</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • handed out groceries to the needy in the community<br>
+            • retrieval of shopping carts<br>
+            • ensuring everyone was safe and looked after<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2018 - April 2018</span>
           </div>
         </div>
 
@@ -151,34 +150,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary"></span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <div></div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"></span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Economics/Admin Studies</div>
+            <div>Concentration in Finance</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">October 2020 - May 2024</span>
           </div>
         </div>
 
@@ -191,7 +190,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Image1.jpeg" width="500px">
+            <img src="img/Image2.jpg" width="500px"><br>
+            <img src="img/Image3.jpeg" width="500px">
+            <img src="img/Image4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
